syntax = "proto3";

import "google/protobuf/empty.proto";
option go_package = "./proto";


service SpecParamSrv {
        rpc GetAll(google.protobuf.Empty) returns (SpecParams){};
        rpc Create(CreateSpecParam) returns (google.protobuf.Empty){};
}

message SpecParamDetail {
        int32 id = 1;
        int32 spg_id = 2;
        string name = 4;
        bool numeric = 5;
        string unit = 6;
        bool generic = 7;
        bool searching = 8;
        string segements = 9;
}
message SpecParams {
        repeated SpecParamDetail spec_param = 1;
}

message CreateSpecParam {
        int32 spg_id = 1;
        string name = 2;
        bool numeric = 3;
        string unit = 4;
        bool generic = 5;
        bool searching = 6;
        string segements = 7;
}